--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -46,8 +46,13 @@ body {
 }
 
 #suggest{
-    height: 988px;
+    height: 900px;
 }
+
+#suggest1{
+  height: 988px;
+}
+
 
 .icon {
   height: 50px;
@@ -133,8 +138,6 @@ body {
     display: flex;
 }
 
-
-
 #top-section {
   display: flex;
   align-items: center;
@@ -199,3 +202,111 @@ body {
     padding: 20px;
   }
 }
+
+.alert {
+  padding: 10px;
+  width: 500px;
+  background-color: #f44336;
+  color: white;
+  opacity: 1;
+  transition: opacity 0.6s;
+  margin-bottom: 15px;
+}
+
+.alert.success {background-color: #04AA6D;}
+.alert.info {background-color: #2196F3;}
+.alert.warning {background-color: #fcc675;}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
+
+.close:hover {
+  opacity: 1;
+}
+.close:before, .close:after {
+  position: absolute;
+  left: 330px;
+  content: ' ';
+  height: 33px;
+  width: 10px;
+  background-color: rgb(235, 10, 10);
+}
+.close:before {
+  transform: rotate(45deg);
+}
+.close:after {
+  transform: rotate(-45deg);
+}
+
+
+/*======================
+    404 page
+=======================*/
+.page_404{ 
+  padding:40px 0; 
+  background:#fff; 
+  font-family: 'Arvo', 
+  serif;
+}
+
+.page_404  img{ width:100%;}
+.four_zero_four_bg{
+ background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+ }
+ 
+.four_zero_four_bg h1{
+ font-size:80px;
+ }
+ 
+.four_zero_four_bg h3{
+	font-size:80px;
+}
+			 
+.link_404{			 
+	color: #fff!important;
+    padding: 10px 20px;
+    background: #39ac31;
+    margin: 20px 0;
+    display: inline-block;
+}
+.contant_box_404{ margin-top:-50px;}
+
+/*======================
+    Cards
+=======================*/
+
+.card {
+  background: #fff;
+  border-radius: 1px;
+  display: inline-block;
+  height: 200px;
+  margin: 1rem;
+  position: relative;
+  width: 350px;
+}
+
+.card-2 {
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 
+  0 3px 6px rgba(0,0,0,0.23);
+}
+
+.card-3 {
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 
+  0 6px 6px rgba(0,0,0,0.23);
+}
+
