--- a/app/templates/admin/admin_fondos.html
+++ b/app/templates/admin/admin_fondos.html
@@ -22,7 +22,9 @@
 <div>
 {% for fondos in fondos %}
   <div class="card card-3">
-    <a href="/admin/eliminarfondo/{{fondos.id}}" class="close">
+    {% if admin %}
+      <a href="/admin/eliminarfondo/{{fondos.id}}" class="close">
+    {% endif %}
     </a>
     <img src="{{fondos.url}}" width="350" height="200" alt="img fondo">
   </div>
