--- a/app/templates/fondos.html
+++ b/app/templates/fondos.html
@@ -8,10 +8,13 @@
   
   <br>
 
-<div>
+<div class="container">
   {% for url_fondos in url_fondos %}
+    {% if admin %}
+      <a href="/admin/eliminarfondo/{{fondos.id}}" class="close">
+    {% endif %}
     <img src="{{url_fondos.url}}" width="350" height="200">
+    <i class="btn fas fa-arrow-circle-down"></i>
   {% endfor %}
 </div>
-
 {% endblock body %}
