--- a/app/templates/fondos.html
+++ b/app/templates/fondos.html
@@ -14,7 +14,9 @@
       <a href="/admin/eliminarfondo/{{fondos.id}}" class="close">
     {% endif %}
     <img src="{{url_fondos.url}}" width="350" height="200">
-    <i class="btn fas fa-arrow-circle-down"></i>
+    <a href="{{url_fondos.url}}" target="_blank">
+      <i class="btn fas fa-arrow-circle-down"></i>
+    </a>
   {% endfor %}
 </div>
 {% endblock body %}
